Updating Image file path for skills icons

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -103,7 +103,7 @@
 <h1 style="font-weight: bold; margin-top: 100px;"> &#60 /Skills &#62 </h1>
 <h4 style = "color:grey; margin-top: 40px;"> Programming Languages & Tools </h4>
 <p> "start where you stand, with whatever tools you may have at your command and better tools will be found as you move along" -George Herbert </p>
-<img src="images/icons.png" style="height: 100px;">
+<img src="images/Icons.png" style="height: 100px;">
 
 <h1 style="font-weight: bold; margin-top: 100px;"> &#60 /Awards & Activities &#62 </h1>
 
